src/App.css
html,
body {
  font-family: "Roboto", sans-serif !important;
  background: #fff;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
}

.ant-layout .ant-layout-sider {
  min-height: 100vh; /*for IE11*/
}

.pw-input {
  border: 2px solid #eee;
  padding: 0.25em 2em 0.25em 0.5em !important;
}

.ant-input-affix-wrapper,
.ant-dropdown-trigger {
  margin-right: 0.5em;
}
/* UI */
.noselect {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

label,
.clickable {
  cursor: pointer;
}

.em2 {
  font-weight: 700;
  font-size: 1.5em !important;
}
.em3 {
  font-weight: 400;
  font-size: 1em;
  color: #7e7e7e !important;
}
.em4-light {
  font-weight: 400;
  font-size: 1em;
  color: #8c8c8c !important;
}

/* Positioning */
.center {
  position: absolute !important;
  top: 50% !important;
  left: 50% !important;
  transform: translate(-50%, -50%) !important;
}

.valign {
  position: absolute !important;
  top: 50% !important;
  transform: translateY(-50%) !important;
}

.halign {
  position: absolute !important;
  left: 50% !important;
  transform: translateX(-50%) !important;
}

